log/build_2024-05-05_16-19-46/yolov8_detection/stderr.log
  File "/home/zerda/ros2_ws/install/yolov8_detection/lib/python3.10/site-packages/yolov8_detection/car_detector.py", line 1
    zerda@zerdaGul:~/ros2_ws$ ros2 run yolov8_detection car_detector
                  ^
SyntaxError: invalid syntax

